# mle_challenge_phase1

./: .env  .gitignore  pyproject.toml
app/: main.py
app/api/v1/: comercializacao.py  exportacao.py  importacao.py  management.py  processamento.py  producao.py
app/db/: connections.py
app/db/model/: vitivinicultura.py
app/schemas/: responses.py
app/services/embrapa/: downloader.py  model.py  site.py
tests/resources/exportacao/: Exp Espumantes.csv  Exp Vinho.csv  ExpSuco.csv  ExpUva Data.csv
tests/resources/importacao/: Imp Espumantes Data.csv  Imp Frescas.csv  ImpPassas Data.csv  ImpSuco Data.csv  ImpVinhos Data.csv
