[project]
name = "wine-embrapa"
version = "0.1.0"
description = "Fiap Chanlange 1"
authors = [
    {name = "Sandro Barros",email = "sandro.barros@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvicorn (>=0.34.2,<0.35.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "polars (>=1.30.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "adbc-driver-manager (>=1.6.0,<2.0.0)",
    "aiohttp (>=3.12.6,<4.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "adbc-driver-postgresql (>=1.6.0,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wine-embrapa"
version = "0.1.0"
packages = [{ include = "app" }]